--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,25 @@ blockquote {
   margin: 8px auto;
 }
 
+.subtitulo-interno {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 30px;
+  letter-spacing: 0.1em;
+  color: #000;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.subtitulo-interno:after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #000;
+  margin: 8px 0;
+}
+
 /* Header */
 .header {
   position: fixed;
@@ -90,6 +109,18 @@ blockquote {
 
 .header_menu ul li a:hover {
   color: #fff;
+}
+
+.header_menu ul li a.menu_ativo {
+  color: #fff;
+}
+
+.header_menu ul li a.menu_ativo:after {
+  content: "";
+  display: block;
+  height: 3px;
+  background: #fff;
+  margin: 4px 0;
 }
 /* Introdução */
 .introducao {
@@ -141,6 +172,31 @@ blockquote {
 
 .introducao .btn {
   margin-left: 400px; /* botao impossivel de centralizar */
+}
+
+/* Introdução interna */
+.introducao-interna {
+  width: 100%;
+  margin-top: 92px;
+  height: 160px;
+  text-align: center;
+  color: #fff;
+  padding-top: 30px;
+}
+
+.introducao-interna h1 {
+  font-size: 36px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.introducao-interna h1:after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  margin: 6px auto 10px auto;
+  background: #fff;
 }
 
 /* Produtos */
@@ -237,6 +293,7 @@ blockquote {
 
 .qualidade_lista {
   padding-top: 20px;
+  overflow: auto; /* clear fix */
 }
 
 .qualidade_lista li {
