--- a/css/contato.css
+++ b/css/contato.css
@@ -11,7 +11,6 @@
 
 .form label {
   display: block;
-  color: #000;
   font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 18px;
   line-height: 25px;
@@ -36,22 +35,11 @@
   height: 120px;
   border: 4px solid #fec63e;
   background: none;
-  color: #000;
   outline: none;
   padding: 7px 10px;
   font-size: 14px;
   font-family: Georgia, "Times New Roman", Times, serif;
   margin-bottom: 20px;
-}
-
-.form button {
-  background: none;
-  padding: 7px 40px;
-}
-
-.form button:hover {
-  border-color: #000;
-  color: #fec63e;
 }
 
 .contato_dados {
@@ -74,6 +62,10 @@
   padding-top: 10px;
 }
 
+.contato_dados p:nth-of-type(even) {
+  margin-bottom: 30px;
+}
+
 .contato_redes ul li {
   display: inline-block;
   padding: 10px 5px;
@@ -85,8 +77,8 @@
   padding: 10px;
 }
 
-.contato_redes h3 {
-  padding-top: 20px;
+.contato_dados ul li a:hover {
+  border-color: #000;
 }
 
 .contato_redes h3:after {
