--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -9,12 +9,27 @@
   height: 672px;
 }
 
-.preto {
+.quote_cliente {
+  padding: 60px 0;
+  max-width: 460px;
+  margin: 0 auto;
+}
+
+.quote_cliente p {
   font-family: Georgia, "Times New Roman", Times, serif;
   font-style: italic;
-  font-size: 25px;
+  font-size: 18px;
   color: #000;
   line-height: 25px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.quote_cliente cite {
+  font-size: 18px;
+  font-weight: bold;
+  float: right;
+  font-style: normal;
 }
 
 .produtos .container div:last-child {
