--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,10 @@ blockquote {
   text-align: center;
 }
 
+.produtos_lista li img {
+  margin: 0 auto;
+}
+
 .produtos_lista li h3 {
   font-weight: bold;
   font-size: 18px;
