--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -1,5 +1,21 @@
 /* Estilo tablet */
 @media only screen and (min-width: 788px) and (max-width: 979px) {
+  /* Qualidade Home */
+  .qualidade:after {
+    right: 66px;
+  }
+  .qualidade_lista li {
+    text-align: center;
+    padding: 0 10px;
+  }
+  /* Footer */
+  .footer_redes ul li a {
+    padding: 6px;
+  }
+  .footer_redes ul li a img {
+    width: 26px;
+    height: 26px;
+  }
 }
 
 /* Estilo Smartphone */
@@ -33,9 +49,19 @@
     background: url("../img/bg-mobile.jpg") no-repeat center;
     background-size: cover;
     margin-top: 0;
-    padding-top: 20px;
+    padding-top: 40px;
   }
+  .introducao h1 {
+    font-size: 36px;
+  }
+
   .introducao .btn {
     margin-left: 70px; /* Botão impossível */
+  }
+  .call {
+    padding: 10px;
+  }
+  .qualidade:after {
+    display: none;
   }
 }
