--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -16,8 +16,26 @@
     width: 26px;
     height: 26px;
   }
+  /* Produto */
+  .produto_item h2 {
+    top: -150px;
+  }
+  .produto_icone {
+    background: #000;
+    padding: 41px 0;
+  }
+  .produto_info p {
+    font-size: 14px;
+    line-height: 20px;
+    height: 122px;
+    padding: 20px 30px;
+  }
+  .produto_info ul li {
+    width: 181px;
+    height: 49px;
+  }
 }
-
+/* Final Estilo Tablet */
 /* Estilo Smartphone */
 @media only screen and (max-width: 787px) {
   /* Header */
@@ -44,6 +62,13 @@
     border-color: #fff;
   }
 
+  .header_menu ul li a.menu_ativo {
+    border-color: #fff;
+  }
+  .header_menu ul li a.menu_ativo:after {
+    display: none;
+  }
+
   /* Introdução */
   .introducao {
     background: url("../img/bg-mobile.jpg") no-repeat center;
@@ -58,10 +83,59 @@
   .introducao .btn {
     margin-left: 70px; /* Botão impossível */
   }
+  /* Introdução Interna */
+  .introducao-interna {
+    margin-top: 0;
+  }
+
+  /* Call */
   .call {
     padding: 10px;
   }
+  /* Home */
   .qualidade:after {
     display: none;
   }
+
+  /* Sobre */
+  .missao_sobre p {
+    padding-right: 0;
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  .missao_sobre ul li {
+    font-size: 14px;
+    line-height: 25px;
+  }
+  /* Produto */
+  .produto_item h2 {
+    top: -100px;
+    margin-bottom: -68px;
+  }
+  .produto_icone {
+    background: #000;
+    padding: 41px 0;
+  }
+  .produto_info p {
+    font-size: 14px;
+    line-height: 20px;
+    height: auto;
+    padding: 20px 30px;
+  }
+  .produto_info ul li {
+    width: 149px;
+    height: 49px;
+    font-size: 14px;
+    line-height: 20px;
+    padding-top: 14px;
+  }
+  .form {
+    padding-right: 0;
+  }
+  .orcamento_dados ul {
+    padding-right: 0;
+  }
 }
+
+/* Final Estilo Smartphone */
