--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,7 @@ blockquote {
   font-size: 14px;
   letter-spacing: 0.1em;
   text-transform: uppercase;
+  color: #fff;
 }
 
 .introducao .btn {
